--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,6 +11,17 @@
         <item name="fontFamily">@font/roboto_bold</item>
     </style>
 
+    <style name="add_course_button_style">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">10dp</item>
+        <item name="android:layout_marginEnd">14dp</item>
+        <item name="android:layout_marginBottom">14dp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="backgroundTint">@color/app_primary</item>
+        <item name="fontFamily">@font/roboto_bold</item>
+        <item name="cornerRadius">180dp</item>
+    </style>
+
     <style name="form_text_style">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
