--- a/app/src/main/res/layout/fragment_update_cgpa.xml
+++ b/app/src/main/res/layout/fragment_update_cgpa.xml
@@ -50,8 +50,11 @@
 
     <ListView
         android:id="@+id/grade_list"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="@+id/final_cgpa"
         app:layout_constraintBottom_toTopOf="@+id/sgpa"
