--- a/app/src/main/res/layout/fragment_add_plan.xml
+++ b/app/src/main/res/layout/fragment_add_plan.xml
@@ -2,6 +2,12 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <data>
+        <variable
+            name="viewModel"
+            type="com.ridm.eduRIDM.screen.addplan.AddPlanViewModel" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -389,7 +395,8 @@
             style="@style/form_button_style"
             android:text="@string/add_plan"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            android:onClick="@{() -> viewModel.onSubmit() }"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
