Navigation for: Welcome screen to register screen Edit Timetable to Profile page

--- a/app/src/main/res/layout/fragment_welcome_screen.xml
+++ b/app/src/main/res/layout/fragment_welcome_screen.xml
@@ -2,6 +2,12 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <data>
+        <variable
+            name="viewModel"
+            type="com.ridm.eduRIDM.screen.onboarding.WelcomeScreenViewModel" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -72,6 +78,7 @@
             android:layout_marginBottom="4dp"
             android:text="@string/google_sign_in"
             app:layout_constraintBottom_toBottomOf="parent"
+            android:onClick="@{() -> viewModel.onNavigateToRegisterClicked()}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
