Add Navigation from Register to AddTimetable layout and Profile to Update CGPA

--- a/app/src/main/res/layout/fragment_home_screen.xml
+++ b/app/src/main/res/layout/fragment_home_screen.xml
@@ -2,6 +2,12 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <data>
+        <variable
+            name="viewModel"
+            type="com.ridm.eduRIDM.screen.homescreen.HomeScreenViewModel" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -19,7 +25,8 @@
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/cardView"
-            app:srcCompat="@drawable/play_button_home_background" />
+            app:srcCompat="@drawable/play_button_home_background"
+            android:onClick="@{() -> viewModel.onNavigateToStopwatchScreen()}"/>
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView"
