Add Navigation from Register and Profile (#18)
Co-authored-by: Ritvik <74790215+Code-R57@users.noreply.github.com>

--- a/app/src/main/res/navigation/app_nav_graph.xml
+++ b/app/src/main/res/navigation/app_nav_graph.xml
@@ -2,7 +2,7 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/app_nav_graph"
-    app:startDestination="@id/editTimetableFragment">
+    app:startDestination="@id/homeScreenFragment">
 
     <fragment
         android:id="@+id/welcomeScreenFragment"
