--- a/app/src/main/res/layout/fragment_profile_screen.xml
+++ b/app/src/main/res/layout/fragment_profile_screen.xml
@@ -155,6 +155,7 @@
             android:layout_height="24dp"
             android:layout_marginStart="8dp"
             android:backgroundTint="@color/white"
+            android:onClick="@{() -> viewModel.onNavigateToEditTTClicked()}"
             app:layout_constraintBottom_toBottomOf="@+id/your_timetable_header"
             app:layout_constraintEnd_toStartOf="@+id/add_extra_class"
             app:layout_constraintHorizontal_bias="0.0"
@@ -168,6 +169,7 @@
             android:layout_height="30dp"
             android:layout_marginEnd="32dp"
             android:backgroundTint="@color/white"
+            android:onClick="@{() -> viewModel.onNavigateToAddExtraClass()}"
             app:layout_constraintBottom_toBottomOf="@+id/edit_timetable"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/edit_timetable"
