--- a/app/src/main/res/layout/fragment_stopwatch_screen.xml
+++ b/app/src/main/res/layout/fragment_stopwatch_screen.xml
@@ -2,6 +2,12 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <data>
+        <variable
+            name="viewModel"
+            type="com.ridm.eduRIDM.screen.stopwatchscreen.StopwatchScreenViewModel" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -58,7 +64,9 @@
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/play_button"
             app:layout_constraintTop_toTopOf="@+id/play_button"
-            app:srcCompat="@drawable/ic_baseline_stop_24" />
+            app:layout_constraintVertical_bias="0.0"
+            app:srcCompat="@drawable/ic_baseline_stop_24"
+            android:onClick="@{() -> viewModel.onNavigateToHomePageClicked()}"/>
 
         <ImageButton
             android:id="@+id/music_button"
