Add Navigation from Add Timetable to Home Screen Layout

--- a/app/src/main/res/layout/fragment_add_timetable.xml
+++ b/app/src/main/res/layout/fragment_add_timetable.xml
@@ -2,6 +2,11 @@
 <layout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+    <data>
+        <variable
+            name="viewModel"
+            type="com.ridm.eduRIDM.screen.timetableedit.AddTimetableViewModel" />
+    </data>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -46,13 +51,17 @@
             app:layout_constraintEnd_toStartOf="@+id/submit_button"
             app:layout_constraintHorizontal_bias="0.024"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/submit_button" />
+            app:layout_constraintTop_toTopOf="@+id/submit_button"
+            android:onClick="@{() -> viewModel.onSkipClicked()}"/>
 
         <Button
             android:id="@+id/submit_button"
             style="@style/form_button_style"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="24dp"
+            android:onClick="@{() -> viewModel.onSubmitClicked()}"
             android:text="@string/submit"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
