--- a/app/src/main/res/navigation/app_nav_graph.xml
+++ b/app/src/main/res/navigation/app_nav_graph.xml
@@ -2,7 +2,7 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/app_nav_graph"
-    app:startDestination="@id/homeScreenFragment">
+    app:startDestination="@id/addTimetableFragment">
 
     <fragment
         android:id="@+id/welcomeScreenFragment"
@@ -25,7 +25,7 @@
         android:name="com.ridm.eduRIDM.screen.timetableedit.AddTimetableFragment"
         android:label="AddTimetableFragment">
         <action
-            android:id="@+id/action_addTimetableFragment_to_homeScreenFragment2"
+            android:id="@+id/action_addTimetableFragment_to_homeScreenFragment"
             app:destination="@id/homeScreenFragment" />
     </fragment>
     <fragment
