--- a/app/src/main/res/layout/fragment_add_plan.xml
+++ b/app/src/main/res/layout/fragment_add_plan.xml
@@ -395,8 +395,7 @@
             style="@style/form_button_style"
             android:text="@string/add_plan"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:onClick="@{() -> viewModel.onSubmit() }"/>
+            app:layout_constraintEnd_toEndOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
