--- a/app/src/main/res/layout/fragment_my_acads.xml
+++ b/app/src/main/res/layout/fragment_my_acads.xml
@@ -101,7 +101,7 @@
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             app:backgroundTint="@color/app_secondary"
-            android:onClick="@{() -> viewModel}"/>
+            android:onClick="@{() -> viewModel.onNavigateToAddEvalClicked()}"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
