Add Room Integration for UpdateCgpa

--- a/app/src/main/res/layout/course_card.xml
+++ b/app/src/main/res/layout/course_card.xml
@@ -11,7 +11,7 @@
         android:background="@drawable/classes_card_background">
 
         <TextView
-            android:id="@+id/course_code"
+            android:id="@+id/dept_code"
             style="@style/form_text_style"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -30,8 +30,8 @@
             android:layout_height="36dp"
             android:layout_marginTop="8dp"
             android:background="@drawable/spinner_border"
-            app:layout_constraintStart_toStartOf="@+id/course_code"
-            app:layout_constraintTop_toBottomOf="@+id/course_code" />
+            app:layout_constraintStart_toStartOf="@+id/dept_code"
+            app:layout_constraintTop_toBottomOf="@+id/dept_code" />
 
         <Spinner
             android:id="@+id/code_spin"
@@ -44,7 +44,7 @@
             android:background="@drawable/spinner_border"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/branch_spin"
-            app:layout_constraintTop_toBottomOf="@+id/course_code" />
+            app:layout_constraintTop_toBottomOf="@+id/dept_code" />
 
         <TextView
             android:id="@+id/course_name"
@@ -135,7 +135,7 @@
             app:layout_constraintBottom_toTopOf="@+id/code_spin"
             app:layout_constraintEnd_toEndOf="@+id/code_spin"
             app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toEndOf="@+id/course_code"
+            app:layout_constraintStart_toEndOf="@+id/dept_code"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_baseline_remove_circle_outline_24" />
 
