--- a/app/src/main/res/layout/fragment_update_cgpa.xml
+++ b/app/src/main/res/layout/fragment_update_cgpa.xml
@@ -4,7 +4,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.ridm.eduRIDM.screen.updatecgpa.UpdateCGPAViewModel" />
+            type="com.ridm.eduRIDM.screen.updatecgpa.UpdateCgpaViewModel" />
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -121,14 +121,13 @@
             app:layout_constraintTop_toBottomOf="@+id/final_cgpa" />
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/update_cgpa_button"
             style="@style/form_button_style"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/update"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:onClick="@{() -> viewModel.onNavigateToProfileClicked()}"/>
+            app:layout_constraintEnd_toEndOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
