--- a/app/src/main/res/layout/evaluatives_card.xml
+++ b/app/src/main/res/layout/evaluatives_card.xml
@@ -16,7 +16,7 @@
             android:background="@drawable/evaluative_card_upper_border">
 
             <TextView
-                android:id="@+id/course_code"
+                android:id="@+id/dept_code"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
@@ -40,7 +40,7 @@
                 android:textColor="@color/black"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/course_code" />
+                app:layout_constraintTop_toBottomOf="@+id/dept_code" />
 
             <TextView
                 android:id="@+id/date"
@@ -61,11 +61,11 @@
                 android:layout_marginEnd="16dp"
                 android:text="@string/evaluative_time"
                 android:textColor="@color/black"
-                app:layout_constraintBottom_toBottomOf="@+id/course_code"
+                app:layout_constraintBottom_toBottomOf="@+id/dept_code"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toEndOf="@+id/course_code"
-                app:layout_constraintTop_toTopOf="@+id/course_code" />
+                app:layout_constraintStart_toEndOf="@+id/dept_code"
+                app:layout_constraintTop_toTopOf="@+id/dept_code" />
 
             <ImageView
                 android:id="@+id/more_options"
