--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,11 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
+        <include
+            layout="@layout/toolbar_main"
+            android:id="@+id/appbarlayout" />
+
+
         <fragment
             android:id="@+id/nav_host_fragment"
             android:name="androidx.navigation.fragment.NavHostFragment"
@@ -21,7 +26,7 @@
             app:layout_constraintBottom_toTopOf="@id/bottomNav"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/appbarlayout"
             app:navGraph="@navigation/app_nav_graph" />
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
