--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -7,6 +7,6 @@
         app:showAsAction="always"/>
     <item android:id="@+id/profileScreenFragment"
         android:title="Profile"
-        android:icon="@drawable/acc"
+        android:icon="@drawable/ic_baseline_account_circle_24"
         app:showAsAction="always"/>
 </menu>
