--- a/app/src/main/res/layout/toolbar_main.xml
+++ b/app/src/main/res/layout/toolbar_main.xml
@@ -11,6 +11,7 @@
         android:id="@+id/mtoolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
-        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar" />
+        android:background="@color/white"
+        app:titleTextColor="@color/black"
+        app:theme="@style/ThemeOverlay.AppCompat.Light" />
 </com.google.android.material.appbar.AppBarLayout>
