--- a/app/src/main/res/layout/fragment_add_evaluative.xml
+++ b/app/src/main/res/layout/fragment_add_evaluative.xml
@@ -193,7 +193,7 @@
             android:id="@+id/add"
             style="@style/form_button_style"
             android:text="@string/button_add"
-            android:onClick="@{() -> viewModel.onSubmit()}"
+            android:onClick="@{() -> viewModel.onNavigateToMyAcadsClicked()}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
