--- a/app/src/main/res/navigation/app_nav_graph.xml
+++ b/app/src/main/res/navigation/app_nav_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/app_nav_graph"
-    app:startDestination="@id/homeScreenFragment">
+    app:startDestination="@id/myAcadsFragment">
 
     <fragment
         android:id="@+id/welcomeScreenFragment"
