--- a/app/src/main/res/layout/fragment_my_acads.xml
+++ b/app/src/main/res/layout/fragment_my_acads.xml
@@ -75,6 +75,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="4dp"
+            android:fillViewport="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
