Fix RecyclerView and ListView Adapter

--- a/app/src/main/res/layout/evaluatives_card.xml
+++ b/app/src/main/res/layout/evaluatives_card.xml
@@ -195,7 +195,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/syllabus_description" />
 
             <TextView
-                android:id="@+id/duration_values"
+                android:id="@+id/duration_value"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
