--- a/app/src/main/res/layout/fragment_my_acads.xml
+++ b/app/src/main/res/layout/fragment_my_acads.xml
@@ -22,7 +22,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="32dp"
             android:layout_marginEnd="16dp"
-            android:text="@string/my_acads_header"
+            android:text="@string/my_acads_header_eval"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
