--- a/app/src/main/res/layout/grade_card.xml
+++ b/app/src/main/res/layout/grade_card.xml
@@ -11,7 +11,7 @@
 
 
         <TextView
-            android:id="@+id/dept_code"
+            android:id="@+id/dept_code_grade"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -25,7 +25,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/course_code"
+            android:id="@+id/course_code_grade"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -38,7 +38,7 @@
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/dept_code"
+            app:layout_constraintStart_toEndOf="@+id/dept_code_grade"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
@@ -54,7 +54,7 @@
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/dept_code" />
+            app:layout_constraintTop_toBottomOf="@+id/dept_code_grade" />
 
         <Spinner
             android:id="@+id/grade_sel"
@@ -64,7 +64,7 @@
             android:background="@drawable/spinner_border"
             app:layout_constraintBottom_toBottomOf="@+id/grade_course_name"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/dept_code"
+            app:layout_constraintTop_toTopOf="@+id/dept_code_grade"
             app:layout_constraintVertical_bias="0.44" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
