Add RecyclerView for planner cards

--- a/app/src/main/res/layout/fragment_add_plan.xml
+++ b/app/src/main/res/layout/fragment_add_plan.xml
@@ -76,13 +76,14 @@
         <Spinner
             android:id="@+id/spinner_date"
             android:layout_width="136dp"
-            android:layout_height="36dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="4dp"
             android:background="@drawable/spinner_border"
             android:drawableEnd="@drawable/calender_icon"
             android:ems="10"
             android:hint="@string/select_date_hint"
+            android:entries="@array/date_dummy"
             android:inputType="textPersonName"
             android:padding="10dp"
             android:textSize="14sp"
@@ -310,7 +311,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="4dp"
             android:background="@drawable/spinner_border"
-            android:entries="@array/dummy_entries"
+            android:entries="@array/time_dummy"
             android:paddingStart="12dp"
             android:paddingEnd="12dp"
             app:layout_constraintStart_toStartOf="parent"
@@ -332,7 +333,7 @@
             android:layout_marginTop="4dp"
             android:layout_marginEnd="24dp"
             android:background="@drawable/spinner_border"
-            android:entries="@array/dummy_entries"
+            android:entries="@array/time_dummy"
             android:paddingStart="12dp"
             android:paddingEnd="12dp"
             app:layout_constraintEnd_toEndOf="parent"
