--- a/app/src/main/res/layout/classes_card.xml
+++ b/app/src/main/res/layout/classes_card.xml
@@ -11,7 +11,7 @@
         android:background="@drawable/classes_card_background">
 
         <TextView
-            android:id="@+id/course_code_text"
+            android:id="@+id/tt_course_code_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -25,7 +25,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/course_name_text"
+            android:id="@+id/tt_course_name_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -34,11 +34,13 @@
             android:text="@string/course_name"
             android:textColor="@color/black"
             android:textSize="20sp"
+            app:layout_constraintEnd_toStartOf="@+id/tt_attended_button"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/course_code_text" />
+            app:layout_constraintTop_toBottomOf="@+id/tt_course_code_text" />
 
         <TextView
-            android:id="@+id/lecture_text"
+            android:id="@+id/tt_lecture_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -50,10 +52,10 @@
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/course_name_text" />
+            app:layout_constraintTop_toBottomOf="@+id/tt_course_name_text" />
 
         <TextView
-            android:id="@+id/class_time_text"
+            android:id="@+id/tt_class_time_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
@@ -64,49 +66,49 @@
             android:textColor="@color/black"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/lecture_text"
-            app:layout_constraintTop_toBottomOf="@+id/course_name_text" />
+            app:layout_constraintStart_toEndOf="@+id/tt_lecture_text"
+            app:layout_constraintTop_toBottomOf="@+id/tt_course_name_text" />
 
         <ImageButton
-            android:id="@+id/attended_button"
+            android:id="@+id/tt_attended_button"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:layout_marginStart="24dp"
             android:layout_marginTop="8dp"
+            android:layout_marginEnd="70dp"
             android:layout_marginBottom="8dp"
             android:background="@drawable/classes_options_button_background_stroke"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/course_name_text"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_baseline_check_24" />
 
         <ImageButton
-            android:id="@+id/missed_button"
+            android:id="@+id/tt_missed_button"
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:layout_marginStart="8dp"
             android:layout_marginBottom="5dp"
             android:background="@drawable/classes_options_button_background_stroke"
-            app:layout_constraintBottom_toTopOf="@+id/holiday_button"
+            app:layout_constraintBottom_toTopOf="@+id/tt_holiday_button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/attended_button"
-            app:layout_constraintTop_toTopOf="@+id/attended_button"
+            app:layout_constraintStart_toEndOf="@+id/tt_attended_button"
+            app:layout_constraintTop_toTopOf="@+id/tt_attended_button"
             app:layout_constraintVertical_bias="1.0"
             app:srcCompat="@drawable/ic_baseline_close_24" />
 
         <ImageButton
-            android:id="@+id/holiday_button"
+            android:id="@+id/tt_holiday_button"
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="5dp"
             android:background="@drawable/classes_options_button_background_stroke"
-            app:layout_constraintBottom_toBottomOf="@+id/attended_button"
+            app:layout_constraintBottom_toBottomOf="@+id/tt_attended_button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/attended_button"
-            app:layout_constraintTop_toBottomOf="@+id/missed_button"
+            app:layout_constraintStart_toEndOf="@+id/tt_attended_button"
+            app:layout_constraintTop_toBottomOf="@+id/tt_missed_button"
             app:layout_constraintVertical_bias="1.0"
             app:srcCompat="@drawable/ic_outline_holiday_24" />
 
