Added Entries for spinners having static values

--- a/app/src/main/res/layout/fragment_add_extraclass.xml
+++ b/app/src/main/res/layout/fragment_add_extraclass.xml
@@ -17,7 +17,7 @@
             style="@style/form_header_style"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
+            android:layout_marginTop="32dp"
             android:text="@string/add_extra_class_header"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -83,7 +83,7 @@
             android:layout_height="36dp"
             android:layout_marginTop="4dp"
             android:layout_marginEnd="24dp"
-            android:entries="@array/dummy_entries"
+            android:entries="@array/add_extra_class_type"
             android:background="@drawable/spinner_border"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
