--- a/app/src/main/res/layout/fragment_add_plan.xml
+++ b/app/src/main/res/layout/fragment_add_plan.xml
@@ -15,6 +15,7 @@
         <TextView
             android:id="@+id/add_plan_header"
             style="@style/form_header_style"
+            android:layout_marginTop="32dp"
             android:text="@string/add_plan_title"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -288,7 +289,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="4dp"
             android:background="@drawable/spinner_border"
-            android:entries="@array/dummy_entries"
+            android:entries="@array/repeat_for_entries"
             android:paddingStart="12dp"
             android:paddingEnd="12dp"
             app:layout_constraintStart_toStartOf="parent"
