--- a/app/src/main/res/layout/grade_card.xml
+++ b/app/src/main/res/layout/grade_card.xml
@@ -62,6 +62,7 @@
             android:layout_height="32dp"
             android:layout_marginEnd="32dp"
             android:background="@drawable/spinner_border"
+            android:entries="@array/grades"
             app:layout_constraintBottom_toBottomOf="@+id/grade_course_name"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/dept_code_grade"
