--- a/app/src/main/res/layout/planner_card.xml
+++ b/app/src/main/res/layout/planner_card.xml
@@ -111,10 +111,10 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/priority_info" />
+                app:layout_constraintTop_toBottomOf="@+id/priority_info_value" />
 
             <TextView
-                android:id="@+id/priority_info"
+                android:id="@+id/priority_info_value"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
