--- a/app/src/main/res/layout/fragment_welcome_screen.xml
+++ b/app/src/main/res/layout/fragment_welcome_screen.xml
@@ -68,7 +68,7 @@
             app:layout_constraintTop_toBottomOf="@+id/app_slogan_text"
             app:srcCompat="@drawable/pencil" />
 
-        <Button
+        <com.google.android.gms.common.SignInButton
             android:id="@+id/google_sign_in_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -76,9 +76,7 @@
             android:layout_marginTop="4dp"
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="4dp"
-            android:text="@string/google_sign_in"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:onClick="@{() -> viewModel.onNavigateToRegisterClicked()}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
