--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -134,6 +134,7 @@
             android:layout_height="36dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="4dp"
+            android:entries="@array/semester_entries"
             android:background="@drawable/spinner_border"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/current_semester_text" />
@@ -189,12 +190,11 @@
             app:layout_constraintTop_toBottomOf="@+id/credits_completed_text" />
 
         <Button
-            android:id="@+id/next_button"
+            android:id="@+id/next_button_register"
             style="@style/form_button_style"
             android:text="@string/button_next"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:onClick="@{() -> viewModel.onNavigateToAddTimetableClicked()}"/>
+            app:layout_constraintEnd_toEndOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
